Donor Form Uploaded

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.3",
     "sequelize": "^6.31.0",
     "tedious": "^15.1.3"
   },
